# xsri

./: .gitignore  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  configure  configure.ac  configure.in  xsri.c  xsri.spec
